--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ asyncpg==0.28.0
 alembic==1.12.0
 psycopg2-binary==2.9.7
 pydantic==2.3.0
+pydantic-settings==2.0.3
 python-multipart==0.0.6
 python-jose==3.3.0
 passlib==1.7.4
